Add login page prototype

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
   <a href="#regional">Regional Support</a>
   <a href="#alert">Risk Alert</a>
   <a href="#offline">Offline Mode</a>
+  <a href="login.html">Login</a>
 </nav>
 
 <!-- OVERVIEW -->
